Added support for running DROID on Java 9 JVM's